demobook/guestbook-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: guestbook-ingress
spec:
  rules:
  - host:  guestbook.172.31.230.24.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: guestbook-ui
          servicePort: 80
        pathType: ImplementationSpecific
